<resources>
    <string name="app_name">MyPersonalTrainer</string>
    <string name="action_settings">Settings</string>

    <string name="login">Login</string>
    <string name="cancel">Cancel</string>


    <string name="logoff">Log Off</string>
    <string name="customer_list">Customer List</string>
    <string name="session_list">Session List</string>
    <string name="add_customer">Add Customer</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="new_session">New Session</string>
    <string name="complete_session">Complete Session</string>

    <string name="login_jdoe">Logged In: JDOE</string>

    <string name="cust_name">Name:</string>
    <string name="address">Address:</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="zip">Zip:</string>
    <string name="state_hint">2 letter postal abbr."</string>
    <string name="zip_hint">5-digit or 5+4 zip</string>
    <string name="cardno_hint">12-16 digit number</string>
    <string name="cardmo_hint">2-digit mo.</string>
    <string name="cardyr_hint">2-digit yr.</string>

    <string name="submit">Submit Payment</string>
    <string name="exp_date">Exp. Date:</string>
    <string name="card_no">Card no:</string>
    <string name="exp_mo">Exp. Mo:</string>
    <string name="exp_yr">Exp. Yr:</string>
</resources>
